works.  known bugs: jumping an empty tile, selecting a tile, an empty tile and then the next tile highlights and keeps all in array

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ textarea, select, input, button {
 	outline: none; 
 }
 body {
-	/*border:1px solid red;*/
+
 	background-color: #aaa;
 	height:98vh;
 	padding: 0px;
@@ -12,7 +12,7 @@ body {
 	align-content: center;
 }
 div {
-	border:1px solid green;
+	
 }
 h1 {
 
@@ -21,28 +21,52 @@ h1 {
 footer {
 	position:absolute;
 	height:30px;
-/*	border: 1px solid red;
-*/	margin: 0;
+	margin: 0;
 	padding:2px;
 	bottom:0;
+	display: inline;
 }
 p {
 	margin: 0;
 	padding:2px;
+	display: inline;
 }
-.tile {
-	border: 1px dashed red;
-	height: 100px;
-	width:100px;
-	position: absolute;
+main {
+	display: flex;
+	justify-content: center;
+}
+h3 {
+	display: inline;
 }
 
+.tile {
+	border: 1px solid #555;
+	background-color: ;
+	height: 50px;
+	width:50px;
+	margin: 25px; 
+	position: absolute;
+	border-radius: 25px;
+}
+.tilePeg {
+	border: 1px solid #555;
+	background-color: #F66;
+	height: 50px;
+	width:50px;
+	margin: 25px; 
+	position: absolute;
+	border-radius: 25px;
+}
+.tileGlow {
+	/*border:3px solid orange;*/
+-webkit-box-shadow: 0px 0px 15px 5px rgba(255, 255, 190, .75);
+-moz-box-shadow: 0px 0px 15px 5px rgba(255, 255, 190, .75);
+box-shadow: 0px 0px 15px 5px rgba(255, 255, 190, .75); 
+}
 #game-board {
 	align-self: center;
 	position:relative;
 }
-
-main {
-	display: flex;
-	justify-content: center;
+#remaining {
+	color:white;
 }
